<resources>
    <string name="app_name">EY_Fruits</string>
    <string name="set_limit">SET LIMIT</string>
    <string name="fruit_name">Fruit Name</string>
    <string name="price">Price:</string>
    <string name="from">Place:</string>
    <string name="nutrients">Nutrients:</string>
    <string name="quantity">Quantity:</string>
    <string name="organic">Organic:</string>
    <string name="description">Description:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fruitey">Fruitey</string>
</resources>