<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.FruitDetails">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="#E6DEDE"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/fruit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/fruit_name"
        android:textColor="@color/teal_700"
        android:textSize="25sp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/fruits_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="4"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/picture1"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:paddingBottom="4dp"
            android:src="@drawable/fruits" />

        <ImageView
            android:id="@+id/picture2"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:paddingBottom="4dp"
            android:src="@drawable/fruits" />

        <TextView
            android:id="@+id/picture3"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:paddingBottom="4dp"
            android:textSize="60sp"
            android:src="@drawable/fruits" />

        <ImageView
            android:id="@+id/picture4"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:paddingBottom="4dp"
            android:src="@drawable/fruits" />

    </LinearLayout>

    <!-- Nested Scrollview to allow for smooth scrolling as data populates-->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nest_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <!--Inner Linear Layout for the Nested ScrollView-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:padding="12dp">

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="8dp"
                    android:text="@string/price"
                    android:textColor="@color/teal_700"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="130dp"
                    android:text="@string/from"
                    android:textColor="@color/teal_700"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/quantity"
                android:textAlignment="textStart"
                android:textColor="@color/teal_700"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/nutrients_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/nutrients"
                android:textAlignment="textStart"
                android:textColor="@color/teal_700"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/organicity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/organic"
                android:textAlignment="textStart"
                android:textColor="@color/teal_700"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/descriptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/description"
                android:textAlignment="textStart"
                android:textColor="@color/teal_700"
                android:textSize="20sp"
                android:textStyle="italic" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>