<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailsLay">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="242dp"
            android:background="#E6DEDE"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </LinearLayout>

        <!-- ImageView for the Pokemon Image placeholder where
            the incoming image will be glided into using GLIDE
        -->
        <ImageView
            android:id="@+id/fruits_image"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:srcCompat="@drawable/fruits_3" />

        <!-- TextView for Displaying the Name of the Pokemon-->
        <TextView
            android:id="@+id/fruit_new_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/fruit_name"
            android:textColor="@color/teal_700"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/fruits_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="1.0" />

        <!-- TextView for Height of the Pokemon-->
        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/price"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.788"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.112" />

        <!-- TextView for Weight of the Pokemon-->
        <TextView
            android:id="@+id/place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="52dp"
            android:background="@color/colorAccent"
            android:text="@string/from"
            android:textStyle="bold"
            android:textColor="@color/teal_700"
            android:textSize="17sp"
            app:layout_constraintEnd_toStartOf="@+id/price"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <!-- Nested Scrollview to allow for smooth scrolling as data populates-->
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-200dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fruits_image">

            <!--Inner Linear Layout for the Nested ScrollView-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- TextView for List of Nutrients-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_marginTop="70dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="4">

                    <ImageView
                        android:id="@+id/picture1"
                        android:layout_width="0dp"
                        android:layout_height="85dp"
                        android:paddingBottom="4dp"
                        android:layout_weight="1"
                        android:src="@drawable/fruits"/>

                    <ImageView
                        android:id="@+id/picture2"
                        android:layout_width="0dp"
                        android:layout_height="85dp"
                        android:paddingBottom="4dp"
                        android:layout_weight="1"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/fruits"/>

                    <ImageView
                        android:id="@+id/picture3"
                        android:layout_width="0dp"
                        android:layout_height="85dp"
                        android:paddingBottom="4dp"
                        android:layout_weight="1"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/fruits"/>

                    <ImageView
                        android:id="@+id/picture4"
                        android:layout_width="0dp"
                        android:layout_height="85dp"
                        android:paddingBottom="4dp"
                        android:layout_weight="1"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/fruits"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/nutrients_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:paddingBottom="10dp"
                    android:text="@string/nutrients"
                    android:textAlignment="textStart"
                    android:textColor="@color/teal_700"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <!-- TextView for Quantity-->
                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:paddingBottom="10dp"
                    android:text="@string/quantity"
                    android:textAlignment="textStart"
                    android:textColor="@color/teal_700"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <!-- TextView for Organicity-->
                <TextView
                    android:id="@+id/organicity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:paddingBottom="10dp"
                    android:text="@string/organic"
                    android:textAlignment="textStart"
                    android:textColor="@color/teal_700"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <!-- TextView for List of Game Indices-->
                <TextView
                    android:id="@+id/descriptions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:paddingBottom="10dp"
                    android:text="@string/description"
                    android:textAlignment="textStart"
                    android:textColor="@color/teal_700"
                    android:textSize="20sp"
                    android:textStyle="italic" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>